[package]
name = "bleak"
version = "0.1.0"
authors = ["Wyatt J. Miller <wjmiller2016@gmail.com>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"
reqwest = "0.9.24"
select = "0.4.3"
chrono = "0.4.10"
time = "0.2.1"