[package]
authors = ["Wyatt J. Miller <wjmiller2016@gmail.com>"]
edition = "2018"
name = "bleak"
version = "0.2.0"

[dependencies]
chrono = "0.4.11"
embedded-hal = "0.2.3"
linux-embedded-hal = "*"
select = "0.4.3"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
smart-leds = "0.3.0"
ws2812-spi = "0.3.0"

[dependencies.rppal]
features = ["hal"]
version = "0.11.3"

[dependencies.reqwest]
version = "0.9.24"